# rdetect

./: .gitignore  Cargo.toml
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/data/task/: model.rs  service.rs
backend/src/data/user/: model.rs  service.rs
backend/src/db/: mongo.rs
backend/src/dbs/: mongo.rs
backend/src/file/: mod.rs
backend/src/gql/: mod.rs  mutations.rs  queries.rs
backend/src/util/: constant.rs
frontend/: Cargo.toml  cfg.toml  index.html  style.scss  trunk.toml
frontend/graphql/: all_tasks.graphql  create_task.graphql  get_task.graphql  schema.graphql
frontend/src/: main.rs
frontend/src/component/: header.rs
frontend/src/page/: create_task.rs  dashboard.rs  manage_task.rs  mod.rs
frontend/src/route/: mod.rs
frontend/src/util/: common.rs  constant.rs
