[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "2.9.8", features = ["bson", "chrono"] }
async-graphql-tide = "2.9.8"
async-std = { version = "1.9.0", features = ["attributes"] }
dotenv = "0.15.0"
futures = "0.3.15"
lazy_static = "1.4.0"
mongodb = { version="2.0.0-beta.2", default-features=false, features=["async-std-runtime"] }
serde = { version = "1.0.126", features = ["derive"] }
slab = "0.4.3"
tide = "0.16.0"
