[package]
name = "rdetect"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.6"

yew = "0.18.0"
yew-router = "0.15.0"

graphql_client = "0.10.0"
serde = { version="1.0.126", features=["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.41"

toml = "0.5.8"
lazy_static = "1.4.0"